--- a/templates/site/views/index.html
+++ b/templates/site/views/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{title}}</title>
+  
 </head>
 <body>
-    
+    <title>{{title}}</title>
+    <p>{{ url('admin') }}</p>
 </body>
 </html>
