--- a/templates/site/views/index.html
+++ b/templates/site/views/index.html
@@ -7,7 +7,11 @@
   
 </head>
 <body>
-    <title>{{title}}</title>
-    <p>{{ url('admin') }}</p>
+
+   {% include "header.html" %}
+
+   <h1>Index</h1>
+
+   {% include "footer.html" %}
 </body>
 </html>
