--- a/templates/site/views/about.html
+++ b/templates/site/views/about.html
@@ -1,13 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
-  
-</head>
-<body>
-    <title>{{title}}</title>
-    <p>{{ url('sobre') }}</p>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+    <h1>Sobre</h1>
+{% endblock %}
