--- a/templates/site/views/index.html
+++ b/templates/site/views/index.html
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
-  
-</head>
-<body>
+{% extends "base.html" %}
 
-   {% include "header.html" %}
-
-   <h1>Index</h1>
-
-   {% include "footer.html" %}
-</body>
-</html>
+{% block content %}
+    <h1>INDEX</h1>
+{% endblock %}
