--- a/templates/site/views/index.html
+++ b/templates/site/views/index.html
@@ -1,5 +1,9 @@
-{% extends "base.html" %}
+ {% extends 'base.html' %}
+ {% block content %}
 
-{% block content %}
-    <h1>INDEX</h1>
+<div class="container my-5">
+    <h1>Index</h1>
+</div>
+
+
 {% endblock %}
