--- a/templates/site/views/about.html
+++ b/templates/site/views/about.html
@@ -1,5 +1,7 @@
-{% extends "base.html" %}
-
+ {% extends 'base.html' %}
 {% block content %}
-    <h1>Sobre</h1>
+
+<h1>Sobre nós</h1>
+
+
 {% endblock %}
