--- a/templates/site/views/base.html.twig
+++ b/templates/site/views/base.html.twig
@@ -17,11 +17,11 @@
     </head>
     <body>
 
-        {% include 'header.html' %}
+        {% include 'header.html.twig' %}
 
         {% block content %} {% endblock %}
 
-        {% include 'footer.html' %}
+        {% include 'footer.html.twig' %}
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         <script src="{{ url('templates/assets/js/scripts.js') }}"></script>
