--- a/templates/site/views/about.html.twig
+++ b/templates/site/views/about.html.twig
@@ -2,6 +2,9 @@
 {% block content %}
 
 <h1>Sobre nós</h1>
+    <div class="col-lg-3">
+                {% include'sidebar.html.twig ' %}
+            </div>
 
 
 {% endblock %}
