--- a/templates/site/views/index.html.twig
+++ b/templates/site/views/index.html.twig
@@ -1,26 +1,30 @@
 {% extends 'base.html.twig' %}
 {% block content %}
-
     <div class="container my-5">
         <div class='row'>
-            {% for post in posts %}
-                <div class="col-md-3">
-                    <div class="card">
-                        <div class="card-body">
-                        <h5 class="card-title">
-                                    {{ post.title }}
-                                </h5>
-                            <a href='{{url('post/'~post.id)}}'>
-                                
-                                <p class="card-text">
-                                    {{summarizeText(post.text,150) }}
-                                </p>
-                            </a>
+            <div class="col-lg-9 col-md-12">
+                <div class="row">
+                    {% for post in posts %}
+                        <div class="col-md-6 mb-4">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">
+                                        {{ post.title }}
+                                    </h5>
+                                    <a href='{{ url(' post/'~post.id) }}'>
+                                        <p class="card-text">
+                                            {{ summarizeText(post.text,150) }}
+                                        </p>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
-                    </div>
+                    {% endfor %}
                 </div>
-            {% endfor %}
+            </div>
+            <div class="col-lg-3">
+                {% include'sidebar.html.twig ' %}
+            </div>
         </div>
     </div>
-
 {% endblock %}
