--- a/templates/site/views/header.html.twig
+++ b/templates/site/views/header.html.twig
@@ -1,23 +1,48 @@
 <header class="p-3 text-bg-dark">
     <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
-        </a>
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a href="{{ url() }}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+                <img src="{{ url('templates/site/assets/img/php-logo.svg') }}" alt="php8.1" height="22" width="60">
+            </a>
 
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="{{ url() }}" class="nav-link px-2 text-white">Home</a></li>
-          <li><a href="{{ url('sobre') }}" class="nav-link px-2 text-white">Sobre</a></li>
-        </ul>
+            <ul class="navbar navbar-dark bg-dark col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li>
+                    <a href="{{ url() }}" class="nav-link px-2" tooltip="tooltip" title="Página Inicial">Home</a>
+                </li>
+                <li>
+                    <a href="{{ url('sobre') }}" class="nav-link px-2 text-white" tooltip="tooltip"
+                        title="Sobre Nós">Sobre</a>
+                </li>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    Categorias
+                </a>
+                <ul class="dropdown-menu">
+                    {% for category in categories %}
+                    <li>
+                        <a class="dropdown-item" href="{{url('category/'~category.id)}}">
+                            {{category.title}}
+                        </a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </li>
+            </ul>
 
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-          <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Search..." aria-label="Search">
-        </form>
+            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Buscar..."
+                    aria-label="Search">
+            </form>
 
-        <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
-          <button type="button" class="btn btn-warning">Sign-up</button>
+            <div class="text-end">
+                <a href="" class="btn btn-outline-light me-2" tooltip="tooltip" title="Faça login">
+                    Entrar
+                </a>
+                <a href="" class="btn btn-warning" tooltip="tooltip" title="Junte-se a nós">
+                    Cadastre-se
+                </a>
+            </div>
         </div>
-      </div>
     </div>
-  </header>
+</header>
