--- a/templates/site/views/post.html.twig
+++ b/templates/site/views/post.html.twig
@@ -1,10 +1,17 @@
-
 {% extends 'base.html.twig' %}
 {% block content %}
 
-    <div class="container my-5">
-        <h1>{{post.text}}</h1>
-        <p>{{post.text}}</p>
+<div class="container my-5">
+    <div class="row">
+        <div class="col-lg-9 col-md-12">
+            <h1>{{post.title}}</h1>
+
+            <p>{{post.text}}</p>
+        </div>
+        <div class="col-lg-3">
+            {% include'sidebar.html.twig '%}
+        </div>
     </div>
+</div>
 
 {% endblock %}
