--- a/templates/site/views/header.html.twig
+++ b/templates/site/views/header.html.twig
@@ -30,9 +30,10 @@
             </li>
             </ul>
 
-            <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
-                <input type="search" class="form-control form-control-dark text-bg-dark" placeholder="Buscar..."
+            <form action="{{url('search')}}" method="post" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+                <input type="search" name="search" class="form-control form-control-dark text-bg-dark" placeholder="Buscar..."
                     aria-label="Search">
+                <input type="submit">
             </form>
 
             <div class="text-end">
