--- a/templates/site/views/search.html.twig
+++ b/templates/site/views/search.html.twig
@@ -3,7 +3,7 @@
     <div class="container my-5">
         <div class='row'>
             <div class="col-lg-9 col-md-12">
-                {% if pots %}
+                {% if posts %}
                     <div class="row">
                         {% for post in posts %}
                             <div class="col-md-6 mb-4">
@@ -22,10 +22,7 @@
                             </div>
                         {% endfor %}
                     </div>
-                    {% else %}
-                    <div   class="alert alert-warning"  role="alert">
-                        Sua busca não retornou nehum resultado" tente buscar com uma palavra diferente
-                    </div>
+                    
                     
                 {% endif %}
             </div>
