--- a/templates/site/views/base.html.twig
+++ b/templates/site/views/base.html.twig
@@ -18,9 +18,8 @@
         {% include 'header.html.twig' %}
         {% block content %}{% endblock %}
         {% include 'footer.html.twig' %}
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-        <script src="{{ url('templates/assets/js/scripts.js') }}"></script>
-        <script src="{{ url('templates/site/assets/js/site.js') }}"></script>
-    </body>
-</html>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="{{ url('templates/assets/js/scripts.js') }}"></script>
+<script src="{{ url('templates/site/assets/js/site.js') }}"></script></body></html>
