--- a/templates/site/views/header.html.twig
+++ b/templates/site/views/header.html.twig
@@ -30,7 +30,7 @@
             </li>
             </ul>
 
-            <form data-url-busca="{{ url('search') }}" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
+            <form data-url-search="{{ url('search') }}" class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" role="search">
                 <input type="search" name="search" id="search" class="form-control form-control-dark text-bg-dark" placeholder="Buscar..." aria-label="Search">
             </form>            
 
