--- a/templates/admin/assets/css/admin.css
+++ b/templates/admin/assets/css/admin.css
@@ -1,308 +1,266 @@
-a { color: inherit; } 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
 
-li {
-    list-style-type: none;
-  }
+body {
+    font-family: "Inter", "Helvetica Neue", Arial;
+}
 
-  @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+.sidebar {
+    width: 300px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    z-index: 100;
+    transition: left 300ms;
+    background: var(--cor4);
+    overflow-y: auto;
+}
 
-:root{
-  --color-default:black;
-  --color-second:#0067ac;
-  --color-white:#fff;
-  --color-body:#e4e9f7;
-  --color-light:#e0e0e0;
+.sidebar::-webkit-scrollbar {
+    width: 15px;
+}
+
+.sidebar::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px var(--cor3);
+    border-radius: 10px;
+}
+
+.sidebar::-webkit-scrollbar-thumb {
+    background: var(--cor3);
+    border-radius: 10px;
+}
+
+.sidebar::-webkit-scrollbar-thumb:hover {
+    background: var(--cor1);
+}
+
+.sidebarLogo {
+    padding: 1rem;
+    margin-bottom: 5px;
+}
+.sidebarLogo a {
+    color: #fff !important;
+}
+.logo {
+    max-width: 100px;
+    margin: auto !important
+}
+.sidebarTitulo {
+    color: var(--cor12);
+    font-size: .75rem;
+}
+
+.sidebarMenu ul {
+    padding-left: .5rem;
+}
+
+.sidebarMenu li {
+    line-height: 40px;
+    margin-right: 10px;
+    list-style: none
+}
+
+.sidebarMenu li:hover {
+    background: var(--cor4);
+}
+
+.sidebarMenu a {
+    padding: .2rem;
+    display: block;
+    color: var(--cor14);
+    border-bottom: 1px solid var(--cor3);
+}
+
+.sidebarMenu a:hover {
+    border-bottom: 1px solid var(--cor2);
+    color: var(--cor8) !important;
+}
+
+.sidebarMenu i {
+    padding-right: .5rem;
 }
 
 
-*{
-  padding: 0%;
-  margin: 0%;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+header h2 {
+    display: flex;
+    align-items: center;
 }
 
-body{
-  min-height: 100vh;
+header h2 label {
+    display: inline-block;
+    background: transparent;
+    padding-right: 0;
+    margin-right: 1rem;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    color: var(--cor2);
+    display: flex;
+    align-items: center;
+    justify-content: center !important;
+    cursor: pointer
 }
 
-.sidebar{
-  min-height: 100vh;
-  width: 100px;
-  padding: 6px 14px;
-  z-index: 99;
-  background-color: var(--color-default);
-  transition: all .5s ease;
-  position: fixed;
-  top:0;
-  left: 0;
+header h2 i {
+    font-size: .8em;
 }
 
-.sidebar.open{
-  width: 200px;
+#menu {
+    display: none;
 }
 
-.sidebar .logo_details{
-  height: 60px;
-  display: flex;
-  align-items: center;
-  position: relative;
+#menu:checked+.sidebar {
+    width: 70px;
 }
 
-.sidebar .logo_details .icon{
-  opacity: 0;
-  transition: all 0.5s ease ;
+#menu:checked+.sidebar .sidebarLogo a span:last-child,
+#menu:checked+.sidebar li a span:last-child {
+    display: none;
 }
 
-
-
-.sidebar .logo_details .logo_name{
-  color:var(--color-white);
-  font-size: 22px;
-  font-weight: 600;
-  opacity: 0;
-  transition: all .5s ease;
+#menu:checked~.conteudo {
+    margin-left: 70px;
 }
 
-.sidebar.open .logo_details .icon,
-.sidebar.open .logo_details .logo_name{
-  opacity: 1;
+#menu:checked+.sidebar .copyright {
+    display: none
 }
 
-.sidebar .logo_details #btn{
-  position: absolute;
-  top:50%;
-  right: 0;
-  transform: translateY(-50%);
-  font-size: 23px;
-  text-align: center;
-  cursor: pointer;
-  transition: all .5s ease;
+#menu:checked+.sidebar .sidebarLogo{
+    display: none
+}
+#menu:checked+.sidebar .sidebarTitulo{
+    display: none
 }
 
-.sidebar.open .logo_details #btn{
-  text-align: right;
+#menu:checked~.conteudo header {
+    width: calc(100% - 70px);
+    left: 70px;
 }
 
-.sidebar i{
-  color:var(--color-white);
-  height: 60px;
-  line-height: 60px;
-  min-width: 50px;
-  font-size: 25px;
-  text-align: center;
+#menu:checked+.sidebar .sidebarMenu i {
+    font-size: 1.3em;
+    padding-left: .8rem;
 }
 
-.sidebar .nav-list{
-  margin-top: 20px;
-  height: 100%;
+.conteudo {
+    margin-left: 300px;
+    transition: margin-left 300ms;
 }
 
-.sidebar li{
-  position: relative;
-  margin:8px 0;
-  list-style: none;
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 10px 0px 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    left: 300px;
+    top: 0;
+    width: calc(100% - 300px);
+    z-index: 100;
+    transition: left 300ms;
 }
 
-.sidebar li .tooltip{
-  position: absolute;
-  top:-20px;
-  left:calc(100% + 15px);
-  z-index: 3;
-  background-color: var(--color-white);
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-  padding: 6px 14px;
-  font-size: 15px;
-  font-weight: 400;
-  border-radius: 5px;
-  white-space: nowrap;
-  opacity: 0;
-  pointer-events: none;
+header label span {
+    font-size: 1.7rem;
 }
 
-.sidebar li:hover .tooltip{
-  opacity: 1;
-  pointer-events: auto;
-  transition: all 0.4s ease;
-  top:50%;
-  transform: translateY(-50%);
+header h2 {
+    color: #666;
 }
 
-.sidebar.open li .tooltip{
-  display: none;
+main {
+    margin-top: 49px;
+    padding: 2rem 1.5rem;
+    background: #f5f7fb;
+    min-height: calc(100vh - 100px);
 }
 
-.sidebar input{
-  font-size: 15px;
-  color: var(--color-white);
-  font-weight: 400;
-  outline: none;
-  height: 35px;
-  width: 35px;
-  border:none;
-  border-radius: 5px;
-  background-color: var(--color-second);
-  transition: all .5s ease;
+.copyright {
+    font-size: .8em;
 }
 
-.sidebar input::placeholder{
-  color:var(--color-light)
+@media screen and (max-width: 1200px) {
+    .sidebar {
+        width: 70px;
+    }
+    .sidebar .sidebarLogo span:last-child,
+    .sidebar li a span:last-child {
+        display: none;
+    }
+    .sidebarMenu i {
+        font-size: 1.3em;
+        padding-left: .8rem;
+    }
+    .conteudo {
+        margin-left: 70px;
+    }
+    .conteudo header {
+        width: calc(100% - 70px);
+        left: 70px;
+    }
+    .sidebar:hover {
+        width: 300px;
+        z-index: 200;
+    }
+
+    .sidebar:hover .sidebarLogo span:last-child,
+    .sidebar:hover li a span:last-child {
+        display: inline;
+    }
+
+    .sidebar:hover li i {
+        font-size: 1em;
+    }
+
+    .sidebarLogo,.sidebarTitulo {
+        display: none
+    }
+
+
 }
 
-.sidebar.open input{
-  width: 100%;
-  padding: 0 20px 0 50px;
+@media screen and (max-width: 992px) {
 }
 
-.sidebar .bx-search{
-  position: absolute;
-  top:50%;
-  left:0;
-  transform: translateY(-50%);
-  font-size: 22px;
-  background-color: var(--color-second);
-  color: var(--color-white);
+@media screen and (max-width: 768px) {
+    .sidebar {
+        left: -100% !important;
+    }
+
+    .conteudo {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    header {
+        width: 100% !important;
+        left: 0 !important;
+    }
+
+    #menu:checked+.sidebar {
+        left: 0 !important;
+        z-index: 100;
+        width: 300px;
+    }
+
+    #menu:checked~.conteudo {
+        margin-left: 0 !important;
+    }
+
+    #menu:checked+.sidebar .sidebarLogo h2 span:last-child,
+    #menu:checked+.sidebar li a span:last-child {
+        display: inline;
+    }
+    #menu:checked+.sidebar .sidebarLogo{
+        display: block
+    }
+    #menu:checked+.sidebar .sidebarTitulo{
+        display: block
+    }
+
 }
 
-.sidebar li a{
-  display: flex;
-  height: 100%;
-  width: 100%;
-  align-items: center;
-  text-decoration: none;
-  background-color: var(--color-default);
-  position: relative;
-  transition: all .5s ease;
-  z-index: 12;
-}
+@media screen and (max-width: 576px) {
 
-.sidebar li a::after{
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  transform: scaleX(0);
-  background-color: var(--color-white);
-  border-radius: 5px;
-  transition: transform 0.3s ease-in-out;
-  transform-origin: left;
-  z-index: -2;
-}
-
-.sidebar li a:hover::after{
-  transform: scaleX(1);
-  color:var(--color-default)
-}
-
-.sidebar li a .link_name{
-  color:var(--color-white);
-  font-size: 15px;
-  font-weight: 400;
-  white-space: nowrap;
-  pointer-events: auto;
-  transition: all 0.4s ease;
-  pointer-events: none;
-  opacity: 0;
-}
-
-.sidebar li a:hover .link_name,
-.sidebar li a:hover i{
-  transition: all 0.5s ease;
-  color:var(--color-default)
-}
-
-.sidebar.open li a .link_name{
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.sidebar li i{
-  height: 35px;
-  line-height: 35px;
-  font-size: 18px;
-  border-radius: 5px;
-}
-
-.sidebar li.profile{
-  position: fixed;
-  height: 60px;
-  width: 78px;
-  left: 0;
-  bottom:-8px;
-  padding:10px 14px;
-  overflow: hidden;
-  transition: all .5s ease;
-}
-
-.sidebar.open li.profile{
-  width: 250px;
-}
-
-.sidebar .profile .profile_details{
-  display: flex;
-  align-items: center;
-  flex-wrap:  nowrap;
-}
-
-.sidebar li img{
-  height: 45px;
-  width: 45px;
-  object-fit: cover;
-  border-radius: 50%;
-  margin-right: 10px;
-}
-
-.sidebar li.profile .name,
-.sidebar li.profile .designation{
-  font-size: 15px;
-  font-weight: 400;
-  color:var(--color-white);
-  white-space: nowrap;
-}
-
-.sidebar li.profile .designation{
-  font-size: 12px;
-}
-
-.sidebar .profile #log_out{
-  position: absolute;
-  top:50%;
-  right: 0;
-  transform: translateY(-50%);
-  background-color: var(--color-second);
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: all 0.5s ease;
-}
-
-.sidebar.open .profile #log_out{
-  width: 50px;
-  background: none;
-}
-
-.home-section{
-  position: relative;
-  background-color: var(--color-body);
-  min-height: 100vh;
-  top:0;
-  left:78px;
-  width: calc(100% - 78px);
-  transition: all .5s ease;
-  z-index: 2;
-}
-
-.home-section .text{
-  display: inline-block;
-  color:var(--color-default);
-  font-size: 25px;
-  font-weight: 500;
-  margin: 18px;
-}
-
-.sidebar.open ~ .home-section{
-  left:250px;
-  width: calc(100% - 250px);
 }
