--- a/templates/admin/views/base.html.twig
+++ b/templates/admin/views/base.html.twig
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-            Painel Administrativo         
-                    
-        </title>
+        <title>Painel Administrativo</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.0/css/all.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="{{ url('templates/assets/css/style.css') }}">
-        <link rel="stylesheet" href="{{ url('templates/admin/assets/css/admin.css') }}">
-        <link rel="stylesheet" href="{{ url('templates/admin/assets/css/admin.css') }}">
+        <link rel="stylesheet" href="{{ url('templates/assets/css/site.css') }}">
+        <link rel="stylesheet" href="{{ url('templates/admin/assets/css/admin.css') }}">       
+        <link rel="shortcut icon" href="../templates/admin/assets/img/favicon.ico" />
     </head>
-    <body>
-        <div class="container-fluid">
-            {% block head %}{% endblock %}
-        </div>
+    <body> 
+
+        {% block corpo %} {% endblock %}        
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         <script src="{{ url('templates/assets/js/scripts.js') }}"></script>
         <script src="{{ url('templates/admin/assets/js/admin.js') }}"></script>
     </body>
