--- a/templates/admin/views/dashboard.html.twig
+++ b/templates/admin/views/dashboard.html.twig
@@ -6,7 +6,7 @@
 <div class="conteudo">
     {% include 'header.html.twig' %}
     <main>
-        {% block conteudo %}  
+        {% block content %}  
         <div class="card border-0 shadow-sm">
             <div class="card-header bg-white border-0">
                 <h5 class="card-title">Dashboard</h5>
