--- a/templates/admin/views/categories/categories.html.twig
+++ b/templates/admin/views/categories/categories.html.twig
@@ -9,13 +9,13 @@
             </a>
         </li>
         <li class="breadcrumb-item active" aria-current="page">
-            Posts
+           Categorias
         </li>
     </ol>
 </nav>
 <div class="card border-0 shadow-sm">
     <div class="card-header bg-white border-0">
-        <a href="{{url('admin/posts/register')}}" class="btn btn-primary">Cadastrar</a>
+        <a href="{{url('admin/categories/register')}}" class="btn btn-primary">Cadastrar</a>
     </div>
     <div class="card-body">
         <div class="table-responsive">
@@ -29,12 +29,12 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for post in posts %}
+                    {% for category in categories %}
                     <tr>
-                        <th>{{post.id}}</th>
-                        <td>{{post.title}}</td>
+                        <th>{{category.id}}</th>
+                        <td>{{category.title}}</td>
                         <td>
-                            {% if post.status == 1 %}
+                            {% if category.status == 1 %}
                                 <i class="fa-solid fa-circle text-success" tooltip="tooltip" title="Ativo"></i>
                             {% else %}
                                 <i class="fa-solid fa-circle text-danger" tooltip="tooltip" title="Inativo"></i>
