--- a/templates/site/views/header.html.twig
+++ b/templates/site/views/header.html.twig
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a href="{{ url() }}" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-                <img src="{{ url('templates/site/assets/img/blogger.png') }}" alt="" height="20" width="80">
+                <img src="{{url('templates/site/assets/img/php-logo.svg')}}" alt="" height="20" width="80">
             </a>
 
             <ul class="navbar navbar-dark bg-dark col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
