--- a/templates/admin/views/menu.html.twig
+++ b/templates/admin/views/menu.html.twig
@@ -14,7 +14,7 @@
                 Administração
             </li>
             <li>
-                <a href="{{url('admin/posts/lists')}}" tooltip="tooltip" title="Administração de Posts">
+                <a href="{{url('admin/posts/posts')}}" tooltip="tooltip" title="Administração de Posts">
                     <i class="fa-solid fa-file-pen"></i>
                     <span>Posts</span>
                 </a>
