--- a/templates/admin/views/posts/forms_posts.html.twig
+++ b/templates/admin/views/posts/forms_posts.html.twig
@@ -5,10 +5,20 @@
             <li class="breadcrumb-item">
                 <a href="{{ url('admin/dashboard') }}">
                     Home              
+                                                                                                                    
+                                                                                                
+                                                                            
+                                                        
+                                    
                 </a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
-                Post             
+                Posts             
+                                                                                            
+                                                                            
+                                                            
+                                            
+                            
             </li>
         </ol>
     </nav>
@@ -17,27 +27,62 @@
             <form action="{{ url('admin/posts/register') }}" method="post">
                 <div class="mb-3">
                     <label for="titulo" class="form-label">
-                        Título                     
+                        Título             
+                                            
                     </label>
-                    <input type="text" class="form-control" id="titulo" name="titulo"></div>
+                    <input type="text" class="form-control" id="titulo" name="titulo" value="{{ post.title }}"></div>
                     <div class="mb-3">
                         <label class="form-label"></label>
-                        <textarea name='text' class="form-control" id="text" rows="3"></textarea>
+                        <textarea name='text' class="form-control" id="text" rows="5">
+                            {{ post.text }}
+                        </textarea>
                     </div>
-                    <div class="mb-3">
-                        <select class="form-select" name="status">
-                            <option value="1">
-                                Ativo                              
-                            </option>
-                            <option value="0">
-                                Inativo                    
-                            </option>
-                        </select>
-                    </div>
-                    <input type="submit" class="btn btn-primary" value="Cadastrar">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="mb-3">
+                                <label for='categoria_id' , class='form-label'>
+                                    Categoria
+                                                                    
+                                </label>
+                                <select class="form-select" name="categoria_id">
+                                    {% for category in categories %}
+                                        <option value="{{ category.id }}">
+                                            {{ category.title }}
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label for='text' class='form-label'>
+                                        Status
+                                                                        
+                                    </label>
+                                    <select class="form-select" name="status">
+                                        <option value="1">
+                                            Ativo                                                
+                                                                                                                        
+                                                                                
+                                        </option>
+                                        <option value="0">
+                                            Inativo                                                
+                                                                                                                        
+                                                                                
+                                        </option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        {% if post.id is empty %}
+                            <input type="submit" class="btn btn-primary" value="Cadastrar">
+                        {% else %}
+                             <input type="submit" class="btn btn-primary" value="Editar">
+                             <input type="submit" class="btn btn-danger" value="Excluir">
+                        {% endif %}
+                            
 
-                </form>
-            </div>
+            </form>
         </div>
-    {% endblock %}
-    
+    </div>
+{% endblock %}
+                
