change update for edit and create new router update

--- a/templates/admin/views/categories/categories.html.twig
+++ b/templates/admin/views/categories/categories.html.twig
@@ -41,7 +41,7 @@
                             {% endif %}
                         </td>
                         <td class="text-center">
-                            <a href="{{ url('admin/categories/update/'~category.id)}}"><button type="button" class="btn btn-success">Editar</button></a>
+                            <a href="{{ url('admin/categories/edit/'~category.id)}}"><button type="button" class="btn btn-success">Editar</button></a>
                             <a href="{{ url('admin/categories/delete/'~category.id)}}"><button type="button" class="btn btn-danger">Excluir</button></a>
                         </td>
                     </tr>
