change update for edit and create new router update

--- a/templates/admin/views/posts/posts.html.twig
+++ b/templates/admin/views/posts/posts.html.twig
@@ -41,7 +41,7 @@
                             {% endif %}
                         </td>
                         <td class="text-center">
-                            <a href="{{ url('admin/posts/update/'~post.id)}}"><button type="button" class="btn btn-success">Editar</button></a>
+                            <a href="{{ url('admin/posts/edit/'~post.id)}}"><button type="button" class="btn btn-success">Editar</button></a>
                             <a href="{{ url('admin/posts/delete/'~post.id)}}"><button type="button" class="btn btn-danger">Excluir</button></a>
                         </td>
                     </tr>
