return category in post

--- a/templates/admin/views/posts/forms_posts.html.twig
+++ b/templates/admin/views/posts/forms_posts.html.twig
@@ -31,21 +31,16 @@
                         </textarea>
                     </div>
                     <div class="row">
-                        <div class="col-md-6">
-                            <div class="mb-3">
-                                <label for='categoria_id' , class='form-label'>
-                                    Categoria
-                                                                                                        
-                                                                    
-                                </label>
-                                <select class="form-select" name="categoria_id">
-                                    {% for category in categories %}
-                                        <option value="{{ category.id }}">
-                                            {{ category.title }}
-                                        {% endfor %}
-                                    </select>
-                                </div>
-                            </div>
+                <div class="col-md-6">
+                    <div class="mb-3">
+                        <label for="category_id" class="form-label">Categoria</label>
+                        <select class="form-select" name="categoria_id" id="categoria_id">
+                            {% for category in categories %}
+                            <option value="{{category.id}}" {% if post.category_id == category.id %}selected{%endif%}>{{category.title}}</option>
+                            {%endfor%}
+                        </select>
+                    </div>
+                </div>
                             <div class="col-md-6">
                             <div class="mb-3">
                                 <label for="status" class="form-label">Status</label>
