--- a/templates/admin/views/categories/forms_categories.html.twig
+++ b/templates/admin/views/categories/forms_categories.html.twig
@@ -9,26 +9,26 @@
             </a>
         </li>
         <li class="breadcrumb-item active" aria-current="page">
-            Categorias
+           Categorias
         </li>
     </ol>
 </nav>
 <div class="card border-0 shadow-sm">
     <div class="card-body">
-<form action="{% if categories.id %}{{url('admin/categories/edit/'~category.id)}}{% else %}{{url('admin/category/register')}}{% endif %}" method="post">
+        <form action="{% if categories.id %}{{url('admin/categories/edit/'~categories.id)}}{%else%}{{url('admin/categories/register')}}{%endif%}" method="post">
             <div class="mb-3">
-                <label for="titulo" class="form-label">Título</label>
-                <input type="text" name="titulo" id="titulo" value="{{categories.title}}" class="form-control">
+                <label for="title" class="form-label">Título</label>
+                <input type="text" name="title" id="title" value="{{categories.title}}" class="form-control">
             </div>
             <div class="mb-3">
                 <label for="texto" class="form-label">Texto</label>
-                <textarea name="texto" id="texto" class="form-control" rows="3">{{categories.text}}</textarea>
+                <textarea name="text" id="text" class="form-control" rows="3">{{categories.text}}</textarea>
             </div>
 
             <div class="mb-3">
                 <select class="form-select" name="status">
-                <option value="1" {% if category.status == '1' %}selected{%endif%}>Ativo</option>
-                <option value="0" {% if category.status == '0' %}selected{%endif%}>Inativo</option>
+                <option value="1" {% if categories.status == '1' %}selected{%endif%}>Ativo</option>
+                <option value="0" {% if categories.status == '0' %}selected{%endif%}>Inativo</option>
             </select>
             </div>
             
