show total posts active and inactive

--- a/templates/admin/views/posts/posts.html.twig
+++ b/templates/admin/views/posts/posts.html.twig
@@ -14,7 +14,8 @@
     </ol>
 </nav>
 <div class="card border-0 shadow-sm">
-    <div class="card-header bg-white border-0">
+    <div class="card-header bg-white border-0 d-flex justify-content-between align-items-center">
+        Total de posts {{total.total}} - Ativos {{total.ativo}} - Inativos {{total.inativo}} 
         <a href="{{url('admin/posts/register')}}" class="btn btn-primary">Cadastrar</a>
     </div>
     <div class="card-body">
