--- a/templates/admin/views/categories/categories.html.twig
+++ b/templates/admin/views/categories/categories.html.twig
@@ -13,6 +13,9 @@
         </li>
     </ol>
 </nav>
+
+{{ flash() }}
+
 <div class="card border-0 shadow-sm">
 <div class="card-header bg-white border-0 d-flex justify-content-between align-items-center">
 Total de categorias {{total.total}} - Ativos {{total.ativo}} - Inativos {{total.inativo}} 
