--- a/templates/admin/views/categories/categories.html.twig
+++ b/templates/admin/views/categories/categories.html.twig
@@ -29,7 +29,7 @@ Total de categorias {{total.total}} - Ativos {{total.ativo}} - Inativos {{total.
                         <th>id</th>
                         <th>Título</th>
                         <th class="text-center">Status</th>
-                        <th>Ação</th>
+                        <th  class="text-center">Ação</th>
                     </tr>
                 </thead>
                 <tbody>
