create function exit

--- a/templates/admin/views/header.html.twig
+++ b/templates/admin/views/header.html.twig
@@ -16,7 +16,7 @@
                 </a>
             </li>
             <li>
-                <a class="dropdown-item text-danger" href="#" tooltip="tooltip" title="Sair do Sistema">
+                <a class="dropdown-item text-danger" href="{{url('admin/exit')}}" tooltip="tooltip" title="Sair do Sistema">
                     Sair
                 </a>
             </li>
