--- a/templates/admin/views/header.html.twig
+++ b/templates/admin/views/header.html.twig
@@ -7,7 +7,7 @@
 
     <div class="btn-group mb-2">
         <button type="button" class="btn bg-white dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
-            <i class="fa-solid fa-user me-2"></i> Ronaldo Aires
+            <i class="fa-solid fa-user me-2"></i> {{user().name}}
         </button>
         <ul class="dropdown-menu dropdown-menu-lg-end">
             <li>
