--- a/templates/admin/views/login.html.twig
+++ b/templates/admin/views/login.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% block corpo %}
+{% block default %}
 
 <div class="fundo15 p-3">
     <div class="col-md-6 col-sm-6 col-lg-4 mx-auto">
