--- a/templates/admin/views/menu.html.twig
+++ b/templates/admin/views/menu.html.twig
@@ -26,7 +26,7 @@
                 </a>
             </li> 
             <li>
-                <a href="#" tooltip="tooltip" title="Administração de Usuários">
+                <a href="{{url('admin/users/users')}}" tooltip="tooltip" title="Administração de Usuários">
                     <i class="fas fa-users"></i> 
                     <span>Usuários</span>
                 </a>
