--- a/templates/site/views/header.html.twig
+++ b/templates/site/views/header.html.twig
@@ -35,7 +35,7 @@
             </form>            
 
             <div class="text-end">
-                <a href="" class="btn btn-outline-light me-2" tooltip="tooltip" title="Faça login">
+                <a href="{{ url('admin/login') }}" class="btn btn-outline-light me-2" tooltip="tooltip" title="Faça login">
                     Entrar
                 </a>
                 <a href="" class="btn btn-warning" tooltip="tooltip" title="Junte-se a nós">
